k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-server
spec:
  selector:
    matchLabels:
      run: ml-service
  replicas: 1
  template:
    metadata:
      labels:
        run: ml-service
    spec:
      containers:
      - name: ml-service
        image: ghcr.io/converged-computing/lammps-stream-ml:test-server
        # These should be secrets, but OK to test
        # I'm putting them here so you know they exist
        ports:
        - containerPort: 8080
          hostPort: 8080
        - containerPort: 80
          hostPort: 80
