k8s/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-service
spec:
  selector:
    run: ml-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ml-service
            port: 
              number: 8080
